--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,34 @@
+= Considerations
+
+== Concurrency
+
+The concurrent implementation has one issue where the choosen API call, putIfAbsent, is not returning correctly as describe on the javadocs.
+
+[source]
+----
+putIfAbsent call is not returning previous value, but is functioning properly on the cache operation, javadocs states that:
+ Returns:
+   the previous value associated with the specified key, or null if there was no mapping for the key.
+   (A null return can also indicate that the map previously associated null with the key, if the implementation supports null values.)
+Another Source:
+RemoteCache extends Basic Cache: https://docs.jboss.org/infinispan/12.1/apidocs/org/infinispan/client/hotrod/RemoteCache.html
+Which contains the definition: https://docs.jboss.org/infinispan/12.1/apidocs/org/infinispan/commons/api/BasicCache.html#putIfAbsent(K,V,long,java.util.concurrent.TimeUnit)
+ Returns:
+   the value being replaced, or null if nothing is being replaced.
+----
+
+== Testing
+
+The CacheResurce.java implementation requires docker daemon, which is not disponible on openshift code ready plataform.
+I tried on my local machine, but the image 'infinispan/server:12.1.7.Final' is not compatible with Mac M1 (Arm). It runs, but the JVM exits with an Exception error.
+
+= Build Instrutions
+
+[source, bash]
+----
+mvn clean package
+----
+
 = Challenge 6: Discount Codes Microservices challenge with Quarkus and Red Hat Data Grid
 Álvaro López Medina <alopezme@redhat.com>; Katia Aresti <karesti@redhat.com>
 v1.0, 2021-09
